Sitenin yarısı tamam

--- a/etkinlikler.html
+++ b/etkinlikler.html
@@ -3,19 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Etkinlikler | Çemberlitaş Yazılım Kulübü</title>
+  <title>Etkinlikler | Çemberlitaş Girişimcilik Kulübü</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <style>
+    body {
+      background-color: #51008b
+    }
+    </style>
   <header>
     <nav>
       <div class="logo">
         <a href="index.html">
           <img src="images/logo.png" alt="Kulüp Logosu" />
         </a>
-        Çemberlitaş Yazılım Kulübü
+        Çemberlitaş Girişimcilik Kulübü
       </div>
       <div class="nav-links">
         <a href="index.html">Ana Sayfa</a>
@@ -41,10 +45,10 @@
   
 
   <section class="hero">
-    <h1>Çemberlitaş Yazılım Kulübü</h1>
+    <h1>Çemberlitaş Girişimcilik Kulübü</h1>
     <p>Yıl boyunca düzenlediğimiz çeşitli yazılım ve teknoloji etkinlikleriyle öğrenmeyi destekliyoruz.</p>
     <ul style="margin-top: 20px; text-align: left; max-width: 600px; margin-inline: auto;">
-      <li>💻 Web Geliştirme Ekibi</li>
+      <li></li>
       <li>🤖 Modüler, Video Destekli Dersler</li>
       <li>🎮 Online Dersler</li>
       <li>🧠 Konferans salonundaki toplantılar, dersler</li>
@@ -52,7 +56,7 @@
   </section>
 
   <footer>
-    © 2025 Çemberlitaş Yazılım Kulübü. Tüm hakları saklıdır.
+    © 2025 Çemberlitaş Girişimcilik Kulübü. Tüm hakları saklıdır.
   </footer>
 
 </body>
