--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -3,19 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hakkımızda | Çemberlitaş Yazılım Kulübü</title>
+  <title>Hakkımızda | Çemberlitaş Girişimcilik Kulübü</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <style>
+    body {
+      background-color: #51008b
+    }
+    </style>
   <header>
     <nav>
       <div class="logo">
         <a href="index.html">
           <img src="images/logo.png" alt="Kulüp Logosu" />
         </a>
-        Çemberlitaş Yazılım Kulübü
+        Çemberlitaş Girişimcilik Kulübü
       </div>
       <div class="nav-links">
         <a href="index.html">Ana Sayfa</a>
@@ -28,7 +32,7 @@
 
   <section class="hero">
     <h1>Biz Kimiz?</h1>
-    <p>Çemberlitaş Yazılım Kulübü; teknolojiyi seven, kodlamaya ilgi duyan öğrencilerin bir araya geldiği bir topluluktur.</p>
+    <p>Çemberlitaş Girişimcilik; teknolojiyi seven, kodlamaya ilgi duyan öğrencilerin bir araya geldiği bir topluluktur.</p>
     <p>Amacımız yazılım alanında gelişmek, yeni şeyler öğrenmek ve birlikte üretmektir.</p>
   </section>
 
@@ -40,7 +44,7 @@
   
 
   <footer>
-    © 2025 Çemberlitaş Yazılım Kulübü. Tüm hakları saklıdır.
+    © 2025 Çemberlitaş Girişimcilik Kulübü. Tüm hakları saklıdır.
   </footer>
 
 </body>
