--- a/iletisim.html
+++ b/iletisim.html
@@ -3,19 +3,23 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>İletişim | Çemberlitaş Yazılım Kulübü</title>
+  <title>İletişim | Çemberlitaş Girişimcilik Kulübü</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <style>
+    body {
+      background-color: #51008b
+    }
+    </style>
   <header>
     <nav>
       <div class="logo">
         <a href="index.html">
           <img src="images/logo.png" alt="Kulüp Logosu" />
         </a>
-        Çemberlitaş Yazılım Kulübü
+        Çemberlitaş Girişimcilik Kulübü
       </div>
       <div class="nav-links">
         <a href="index.html">Ana Sayfa</a>
@@ -31,21 +35,17 @@
     <p>Sosyal medya hesaplarımız üzerinden bizimle iletişim kurabilirsin.</p>
   
     <div class="contact-buttons">
-      <a href="https://www.linkedin.com/company/calyazilimkulubu/" target="_blank" class="contact-btn linkedin">LinkedIn</a>
-      <a href="https://www.instagram.com/cemberlitasyazilimkulubu/" target="_blank" class="contact-btn instagram">Instagram</a>
-      <a href="https://github.com/CALYazilimKulubu" target="_blank" class="contact-btn github">GitHub</a>
+      <a href="https://www.linkedin.com/company/%C3%A7emberlita%C5%9F-anadolu-lisesi-giri%C5%9Fimcilik-kul%C3%BCb%C3%BC/" target="_blank" class="contact-btn linkedin"><img src="images/linkedin.png" alt="LinkedIn" class="icon"></a>
+      <a href="https://www.instagram.com/cemberlitasgirisimcilik/" target="_blank" class="contact-btn instagram"><img src="images/instagram.png" alt="Instagram" class="icon"></a>
+      <a href="https://www.youtube.com/channel/UCggYzI8hdNFdjuJU1n4w2pA/videos" target="_blank" class="contact-btn youtube"><img src="images/youtube.png" alt="YouTube" class="icon"></a>
+      <a href="https://www.tiktok.com/@cemberlitasgirisimcilik" target="_blank" class="contact-btn tiktok"><img src="images/tiktok.png" alt="TikTok" class="icon"></a>
     </div>
 
-  <div class="image-row">
-    <img src="images/bizitakipetmekicin.jpeg" alt="Resim 1">
-    <img src="images/icerik.jpeg" alt="Resim 2">
-  </div>
-  
     <p class="school-name">Çemberlitaş Anadolu Lisesi</p>
   </section>
 
   <footer>
-    © 2025 Çemberlitaş Yazılım Kulübü. Tüm hakları saklıdır.
+    © 2025 Çemberlitaş Girişimcilik Kulübü. Tüm hakları saklıdır.
   </footer>
 
 </body>
